vault now configured with consul backend
no longer running in -dev mode which means we have
to manually unseal the vault.

vault prevents virtual memory paging secrets to disk by default
so we add IPC_LOCK to the vault container:
e.g. docker run --cap-add=IPC_LOCK ...

copied the initial vault.hcl from this document
https://www.vaultproject.io/docs/config/index.html
but changed the 127.0.0.1 IP addresses to the host
names that are managed by docker-compose.

--- a/yak/notes-to-self.org
+++ b/yak/notes-to-self.org
@@ -85,3 +85,8 @@
    I can't believe that worked :-)
 ** vault There is a Simpler Thing...
    docker pull vault:0.6.1
+* [2016-09-22 Thu]
+** following this tutorial for vault as a CA & PKI: http://cuddletech.com/?p=959
+   that calls for using a config file to boot vault
+   learning how to add config file to vault from here:
+   https://www.vaultproject.io/docs/config/index.html
